Tried to fix gaps below sections on mobile

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -171,6 +171,7 @@ nav {
     z-index: 1;
     //box-shadow: 2px 2px 6px rgba(0,0,0,0.16), 2px 2px 6px rgba(0,0,0,0.23);
     height: 100%;
+    margin: 0;
     @include small() {
         display: none;
     }
